app/assets/stylesheets/tracks.scss
.single-track-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 15px;
}

.single-track-container:hover {
  background-color: rgb(59, 59, 59);
  transition-duration: .2s;
  transition-timing-function: linear;
}

.track-button {
  margin-right: 15px;
  background: transparent;
  color: white;
  outline: none;
  border: none;
}

.track-button:hover {
  cursor: pointer;
}

.track-name {
  color: white;
  width: 300px;
  padding-left: 15px;
}

.track-length {
  color: white;
  position: absolute;
  right: 40px;
}

.track-options-container {
  color: white;
  position: absolute;
  right: 150px;

  .track-options{
    position: relative;
    display: inline-block;
    align-items: center;
    cursor: pointer;
    padding: 10px;
  }

  .track-dropdown {
    font-size: 14px;
    position: absolute;
    right: 25px;
    bottom: 25px;
    background-color: #282828;
    box-shadow: 0 16px 24px rgba(0, 0, 0, .3), 0 6px 8px rgba(0,0,0,.2);
    outline: none;
    transition: all 1s linear;
    width: 150px;
    margin: 0 auto;
    padding: 10px;
    cursor: pointer;
    z-index: 3;
  }

  .hidden {
    display: none;
  }

  #add {
    font-weight: 600;
    cursor: default;
  }

  .track-dropdown-menu {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding-top: 20px;
    
    li {
      padding-top: 7px;
      padding-bottom: 7px;
      width: 100%;
    }

    li:first-child {
      margin-top: 0px;
    }

    li:last-child {
      padding-bottom: 10px;
    }

    li:hover {
      background-color: rgb(59, 59, 59);
    }
  }
}

